--- a/app/src/main/res/layout/fragment_imt.xml
+++ b/app/src/main/res/layout/fragment_imt.xml
@@ -4,26 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/imtfrag"
     android:background="@color/white">
 
     <Spinner
         android:id="@+id/imtSPN"
-        android:layout_width="230dp"
-        android:layout_height="58dp"
+        android:layout_width="227dp"
+        android:layout_height="56dp"
         android:layout_marginTop="8dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mET" />
 
     <EditText
         android:id="@+id/hET"
-        android:layout_width="226dp"
+        android:layout_width="227dp"
         android:layout_height="54dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:gravity="center"
         android:hint="Рост в см"
         android:inputType="number"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,12 +34,13 @@
     <EditText
         android:id="@+id/mET"
         android:layout_width="227dp"
-        android:layout_height="56dp"
+        android:layout_height="54dp"
         android:layout_marginTop="16dp"
         android:ems="10"
         android:gravity="center"
         android:hint="Вес в кг"
         android:inputType="number"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,11 +48,12 @@
 
     <Button
         android:id="@+id/okimtBTN"
-        android:layout_width="231dp"
-        android:layout_height="58dp"
+        android:layout_width="227dp"
+        android:layout_height="56dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="Рассчитать!"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imtSPN" />
@@ -57,8 +62,10 @@
         android:id="@+id/backimtBTN"
         android:layout_width="160dp"
         android:layout_height="48dp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="Назад"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -66,12 +73,12 @@
 
     <TextView
         android:id="@+id/resimtTV"
-        android:layout_width="223dp"
-        android:layout_height="52dp"
+        android:layout_width="227dp"
+        android:layout_height="56dp"
         android:layout_marginTop="16dp"
+        android:gravity="center"
         android:text="Результат"
         android:textSize="22sp"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/okimtBTN" />
@@ -79,9 +86,10 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="350dp"
-        android:layout_height="88dp"
+        android:layout_height="wrap_content"
         android:text="Индекс массы тела (ИМТ) — распространенный и удобный способ оценки соотношения веса и роста человека.
 С помощью нашего онлайн-калькулятора ИМТ для женщин и мужчин вы можете моментально определить свой ИМТ и понять, в какой категории он находится."
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.441"
@@ -92,10 +100,12 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="347dp"
-        android:layout_height="129dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
         android:lines="7"
         android:text="меньше 16 - дефицит массы\n16 - 18.5 - недостаточная масса\n18.5 - 25 - нормальная масса\n25-30 - избыток\n30-35 - ожирение 1 степени\n35-40 - ожирение 2 степени\nбольше 40 - ожирение - 3 степени"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
