--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/addfrag"
     android:background="@color/white">
 
     <Button
@@ -13,6 +14,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
         android:gravity="center"
+        android:textSize="15sp"
         android:text="Назад"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addBTN" />
@@ -47,11 +49,11 @@
 
     <Button
         android:id="@+id/addBTN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="265dp"
+        android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:text="Добавить"
-        android:textSize="22sp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ageET" />
