--- a/app/src/main/res/layout/fragment_cap.xml
+++ b/app/src/main/res/layout/fragment_cap.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@color/white"
-    android:id="@+id/capfragment">
+    android:id="@+id/capfrag">
 
     <Button
         android:id="@+id/backcapBTN"
@@ -13,6 +14,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
+        android:textSize="15sp"
         android:text="Назад"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -27,6 +29,7 @@
         android:ems="10"
         android:gravity="center"
         android:hint="Объем раствора в мл"
+        android:textSize="18sp"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +41,7 @@
         android:layout_height="56dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:textSize="18sp"
         android:gravity="center"
         android:hint="Время введения(мин)"
         android:inputType="number"
@@ -51,6 +55,7 @@
         android:layout_width="231dp"
         android:layout_height="58dp"
         android:layout_marginTop="8dp"
+        android:textSize="20sp"
         android:gravity="center"
         android:text="Рассчитать!"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,6 +79,7 @@
         android:id="@+id/textView3"
         android:layout_width="350dp"
         android:layout_height="88dp"
+        android:textSize="15sp"
         android:text="Расчет скорости внутривенного капельного введения препарата."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +92,7 @@
         android:id="@+id/capSPN"
         android:layout_width="258dp"
         android:layout_height="53dp"
+        android:textSize="18sp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
