--- a/app/src/main/res/layout/fragment_inf.xml
+++ b/app/src/main/res/layout/fragment_inf.xml
@@ -4,24 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/inffrag"
     android:background="@color/white">
 
     <Spinner
         android:id="@+id/infSPN"
-        android:layout_width="233dp"
-        android:layout_height="52dp"
+        android:layout_width="235dp"
+        android:layout_height="55dp"
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/dozET" />
 
     <Button
         android:id="@+id/backinfBTN"
         android:layout_width="160dp"
         android:layout_height="48dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:gravity="center"
         android:text="Назад"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -34,6 +37,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:gravity="center"
+        android:textSize="18sp"
         android:hint="Кол-во препарата в мг"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,11 +47,12 @@
 
     <EditText
         android:id="@+id/mlET"
-        android:layout_width="233dp"
-        android:layout_height="54dp"
+        android:layout_width="235dp"
+        android:layout_height="55dp"
         android:layout_marginTop="4dp"
         android:ems="10"
         android:gravity="center"
+        android:textSize="18sp"
         android:hint="Объем раствора в мл"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,12 +62,13 @@
 
     <EditText
         android:id="@+id/minfET"
-        android:layout_width="230dp"
+        android:layout_width="235dp"
         android:layout_height="55dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:gravity="center"
         android:hint="Вес пациента в кг"
+        android:textSize="18sp"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
@@ -71,12 +77,13 @@
 
     <EditText
         android:id="@+id/dozET"
-        android:layout_width="231dp"
-        android:layout_height="59dp"
+        android:layout_width="235dp"
+        android:layout_height="55dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:gravity="center"
         android:hint="Дозировка в мкг*кг"
+        android:textSize="18sp"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
@@ -85,10 +92,11 @@
 
     <Button
         android:id="@+id/okinfBTN"
-        android:layout_width="231dp"
-        android:layout_height="58dp"
+        android:layout_width="235dp"
+        android:layout_height="55dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
+        android:textSize="18sp"
         android:text="Рассчитать!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.522"
@@ -97,9 +105,9 @@
 
     <TextView
         android:id="@+id/resinfTV"
-        android:layout_width="231dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="235dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="4dp"
         android:gravity="center"
         android:text="Результат"
         android:textSize="22sp"
@@ -111,8 +119,9 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="372dp"
-        android:layout_height="110dp"
+        android:layout_height="wrap_content"
         android:text="Этот калькулятор позволяет расчитать скорость инфузии препарата через линеомат (скорость титрования в мл/час) при известном количестве препарата в милиграммах в известном объеме раствора. Также необходимо указать вес пациента и дозировку, определяемую в мкг*кг/мин."
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
