--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,4 +17,39 @@
         android:label="Пациенты"
         tools:layout="@layout/fragment_dashboard"/>
 
+    <fragment
+        android:id="@+id/navigation_addpacients"
+        android:name="com.example.medcalc.ui.AddFragment"
+        android:label="Добавить пациента"
+        tools:layout="@layout/fragment_add"/>
+
+    <fragment
+        android:id="@+id/navigation_pacient"
+        android:name="com.example.medcalc.ui.PacientFragment"
+        android:label="О пациенте"
+        tools:layout="@layout/fragment_pacient"/>
+
+    <fragment
+        android:id="@+id/navigation_imt"
+        android:name="com.example.medcalc.ui.ImtFragment"
+        android:label="ИМТ"
+        tools:layout="@layout/fragment_imt"/>
+
+    <fragment
+        android:id="@+id/navigation_cap"
+        android:name="com.example.medcalc.ui.CapFragment"
+        android:label="Скорость внутривенного капельного введения препарата"
+        tools:layout="@layout/fragment_cap"/>
+    <fragment
+        android:id="@+id/navigation_def"
+        android:name="com.example.medcalc.ui.DefFragment"
+        android:label="Дефицит калия"
+        tools:layout="@layout/fragment_def"/>
+    <fragment
+        android:id="@+id/navigation_inf"
+        android:name="com.example.medcalc.ui.InfFragment"
+        android:label="Скорость инфузии препарата"
+        tools:layout="@layout/fragment_inf"/>
+
+
 </navigation>
